fix vertical gap in catalog, add .card class, fix .img-fluid width 100%

--- a/control/bootstrap/css/style.css
+++ b/control/bootstrap/css/style.css
@@ -11,6 +11,9 @@
     background-color: #F8F9FA;
     color: rgba(0, 0, 0, 0.6);
 }
+.img-fluid {
+    width: 100%;
+}
 h2 {
     font-size: 32px;
 }
